--- a/Tesis_latex/capitulos/2_marco_teorico.tex
+++ b/Tesis_latex/capitulos/2_marco_teorico.tex
@@ -1,3 +1,6 @@
-\chapter{Marco teórico}
+\chapter{Desarrollo teórico}
 
-\section{Métodos}
+\input{sections/2_1_divisor_methods.tex}
+\input{sections/2_2_quota_methods.tex}
+\input{sections/2_3_resultados_principales.tex}
+\input{sections/2_4_conclusiones_y_extras.tex}
