--- a/Tesis_latex/capitulos/n_notas.tex
+++ b/Tesis_latex/capitulos/n_notas.tex
@@ -1,3 +1,28 @@
 \section{Ejemplos de cosas}
+\begin{itemize}
+    \item Ejemplo de population paradox con Hamilton: \cita{balinski1982fair} pág. 69, tabla 8.1
+    \item Desarrollo de mayoración: \cita{pukkelsheim2017} cap. 8
+\end{itemize}
 
-- Ejemplo de population paradox con Hamilton: \cita{balinski1982fair} pág. 69, tabla 8.1
+
+\section{Títulos posibles}
+\begin{itemize}
+    \item "Una aproximación al problema de apportionment: métodos aleatorizados"
+    \item \item "Una aproximación al problema de apportionment: métodos aleatorizados para distribución de bancas del congreso"
+    \item "Una aproximación al problema de apportionment: análisis y propuestas de sistemas de distribución 
+    de bancas aleatorizados"
+    \item "Una aproximación al problema de apportionment a través del análisis y propuestas de sistemas de distribución 
+    de bancas aleatorizados"
+    \item "Una aproximación al problema de apportionment: distribuyendo las bancas del congreso aleatoriamente"
+\end{itemize}
+
+
+\section{Cosas a corregir/agregar}
+\begin{itemize}
+    \item Terminar gráfico de elecciones en Apportia
+    \item $D-$quota para referirse a $\frac{v_i}{D}$
+    \item D'Hont favorece mayorías
+    \item Métodos determinísticos optimales, distintas métricas de optimalidad y equivalencias con métodos existentes
+    \item ¿Por qué selection monotonicity no se plantea en términos de los votos en lugar de los restos?
+    \item 
+\end{itemize}
