--- a/Tesis_latex/referencias.bib
+++ b/Tesis_latex/referencias.bib
@@ -19,17 +19,49 @@
   publisher={Brookings Institution Press}
 }
 
-@article{einstein1905,
-  author={Einstein, Albert},
-  title={Zur Elektrodynamik bewegter Körper},
-  journal={Annalen der Physik},
-  volume={322},
-  number={10},
-  pages={891--921},
-  year={1905}
+@article{10.1093/biomet/54.3-4.499,
+    author = {SAMPFORD, M.R.},
+    title = {On sampling without replacement with unequal probabilities of selection},
+    journal = {Biometrika},
+    volume = {54},
+    number = {3-4},
+    pages = {499-513},
+    year = {1967},
+    month = {12},
+    abstract = {A sample of n different units is to be drawn from a population or stratum in such a way that unit i has probability npi, assumed less than 1, of appearing in the sample. A mathematical solution of this problem is given by a formula from which the required probability of selection of any possible sample can be calculated: this formula is an extension of one, due to Durbin, for n = 2. The required npican be achieved in practice in three ways: (a) by evaluating the required probabilities for all possible samples, and selecting one; (b) selecting units without replacement, with probabilities of selection that must be recalculated after each drawing; and (c) by selecting up to n units with replacement, the first drawing being made with probabilities pi, and all subsequent ones with probabilities proportional to pi/(1−npi), and rejecting completely any sample that does not contain n different units. Method (c) seems likely to be the most convenient in practice. The probability of the simultaneous appearance in the sample of any pair of units is relatively easily calculated, so that unbiased variance estimates can be obtained without undue labour.},
+    issn = {0006-3444},
+    doi = {10.1093/biomet/54.3-4.499},
+    url = {https://doi.org/10.1093/biomet/54.3-4.499},
+    eprint = {https://academic.oup.com/biomet/article-pdf/54/3-4/499/624156/54-3-4-499.pdf},
 }
 
-@inbook{doi:10.1137/1.9781611978322.39,
+@Inbook{Tillé2025,
+author="Till{\'e}, Yves",
+editor="Lovric, Miodrag",
+title="Sampling Algorithms",
+bookTitle="International Encyclopedia of Statistical Science",
+year="2025",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="2241--2242",
+abstract="A sampling algorithm is a procedure that allows us to select randomly a subset of units (a sample) from a population without enumerating all the possible samples of the population.",
+isbn="978-3-662-69359-9",
+doi="10.1007/978-3-662-69359-9_545",
+url="https://doi.org/10.1007/978-3-662-69359-9_545"
+}
+
+@article{brewer_sampling,
+author = {Brewer, K.},
+year = {2008},
+month = {02},
+pages = {5 - 13},
+title = {A Model of Systematic Sampling with Unequal Probabilities},
+volume = {5},
+journal = {Australian Journal of Statistics},
+doi = {10.1111/j.1467-842X.1963.tb00132.x}
+}
+
+@inbook{combinatorialcorrea,
 author = {Javier Cembrano and José Correa and Ulrike Schmidt-Kraepelin and Alexandros Tsigonias-Dimitriadis and Victor Verdugo},
 title = {New Combinatorial Insights for Monotone Apportionment},
 booktitle = {Proceedings of the 2025 Annual ACM-SIAM Symposium on Discrete Algorithms (SODA)},
@@ -38,7 +70,7 @@ pages = {1308-1328},
 doi = {10.1137/1.9781611978322.39},
 URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611978322.39},
 eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611978322.39},
-    abstract = { Abstract The apportionment problem constitutes a fundamental problem in democratic societies: How to distribute a fixed number of seats among a set of states in proportion to the states’ populations? This—seemingly simple—task has led to a rich literature and has become well known in the context of the US House of Representatives. In this paper, we connect the design of monotone apportionment methods to classic problems from discrete geometry and combinatorial optimization and explore the extent to which randomization can enhance proportionality. We first focus on the well-studied family of stationary divisor methods, which satisfy the strong population monotonicity property, and show that this family produces only a slightly superlinear number of different outputs as a function of the number of states. While our upper and lower bounds leave a small gap, we show that—surprisingly—closing this gap would solve a long-standing open problem from discrete geometry, known as the complexity of k-levels in line arrangements. The main downside of divisor methods is their violation of the quota axiom, i.e., every state should receive ⌊qi ⌋ or ⌈qi ⌉ seats, where qi is the proportional share of the state. As we show that randomizing over divisor methods can only partially overcome this issue, we propose a relaxed version of divisor methods in which the total number of seats may slightly deviate from the house size. By randomizing over these methods, we can simultaneously satisfy population monotonicity, quota, and ex-ante proportionality. Finally, we turn our attention to quota-compliant methods that are house-monotone, i.e., no state may lose a seat when the house size is increased. We provide a polyhedral characterization based on network flows, which implies a simple description of all ex-ante proportional randomized methods that are house-monotone and quota-compliant. }
+abstract = { Abstract The apportionment problem constitutes a fundamental problem in democratic societies: How to distribute a fixed number of seats among a set of states in proportion to the states’ populations? This—seemingly simple—task has led to a rich literature and has become well known in the context of the US House of Representatives. In this paper, we connect the design of monotone apportionment methods to classic problems from discrete geometry and combinatorial optimization and explore the extent to which randomization can enhance proportionality. We first focus on the well-studied family of stationary divisor methods, which satisfy the strong population monotonicity property, and show that this family produces only a slightly superlinear number of different outputs as a function of the number of states. While our upper and lower bounds leave a small gap, we show that—surprisingly—closing this gap would solve a long-standing open problem from discrete geometry, known as the complexity of k-levels in line arrangements. The main downside of divisor methods is their violation of the quota axiom, i.e., every state should receive ⌊qi ⌋ or ⌈qi ⌉ seats, where qi is the proportional share of the state. As we show that randomizing over divisor methods can only partially overcome this issue, we propose a relaxed version of divisor methods in which the total number of seats may slightly deviate from the house size. By randomizing over these methods, we can simultaneously satisfy population monotonicity, quota, and ex-ante proportionality. Finally, we turn our attention to quota-compliant methods that are house-monotone, i.e., no state may lose a seat when the house size is increased. We provide a polyhedral characterization based on network flows, which implies a simple description of all ex-ante proportional randomized methods that are house-monotone and quota-compliant. }
 }
 
 @incollection{kurian2011droop,
@@ -53,4 +85,113 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611978322.39},
   doi       = {10.4135/9781608712434.n455},
   url       = {https://sk.sagepub.com/ency/edvol/the-encyclopedia-of-political-science/chpt/droop-quota},
   note      = {SAGE Publications, Inc., Sage Knowledge Database}
+}
+
+@article{caulfield2010apportioning,
+  author  = {Michael J. Caulfield},
+  title   = {Apportioning Representatives in the United States Congress: Paradoxes of Apportionment},
+  journal = {Convergence},
+  year    = {2010},
+  month   = {11},
+  doi     = {10.4169/loci003163},
+  url     = {https://doi.org/10.4169/loci003163},
+  note    = {Gannon University}
+}
+
+@article{PALOMARES201611,
+title = {The whole and its parts: On the coherence theorem of Balinski and Young},
+journal = {Mathematical Social Sciences},
+volume = {83},
+pages = {11-19},
+year = {2016},
+issn = {0165-4896},
+doi = {https://doi.org/10.1016/j.mathsocsci.2016.06.001},
+url = {https://www.sciencedirect.com/science/article/pii/S0165489616300397},
+author = {Antonio Palomares and Friedrich Pukelsheim and Victoriano Ramírez},
+abstract = {A new proof of the Coherence Theorem of Balinski and Young is presented. The theorem elucidates the methods used to apportion parliamentary seats among political parties proportionately to their vote counts, or among geographical districts proportionately to their population figures. A proportional apportionment method is coherent when each seat apportionment among all claimants is such that every part of it is a valid solution for the subset of claimants concerned. The Coherence Theorem states that every coherent apportionment method is compatible with a divisor method.}
+}
+
+@misc{correa2024monotonerandomizedapportionment,
+      title={Monotone Randomized Apportionment}, 
+      author={José Correa and Paul Gölz and Ulrike Schmidt-Kraepelin and Jamie Tucker-Foltz and Victor Verdugo},
+      year={2024},
+      eprint={2405.03687},
+      archivePrefix={arXiv},
+      primaryClass={cs.GT},
+      url={https://arxiv.org/abs/2405.03687}, 
+}
+
+@book{bertsimas,
+  added-at = {2016-11-26T13:11:51.000+0100},
+  author = {Bertsimas, D. and Tsitsiklis, J.},
+  biburl = {https://www.bibsonomy.org/bibtex/2d964442094534dddaa69149f778ded30/machinelearning},
+  edition = {1st},
+  interhash = {5f8b8e1f3575c667656c8f8853595583},
+  intrahash = {d964442094534dddaa69149f778ded30},
+  isbn = {1886529191},
+  keywords = {ml},
+  publisher = {Athena Scientific},
+  timestamp = {2016-11-26T13:17:02.000+0100},
+  title = {Introduction to Linear Optimization},
+  year = 1997
+}
+
+@misc{singh2013entropyoptimizationcounting,
+title={Entropy, Optimization and Counting}, 
+author={Mohit Singh and Nisheeth K. Vishnoi},
+year={2013},
+eprint={1304.8108},
+archivePrefix={arXiv},
+primaryClass={cs.DS},
+url={https://arxiv.org/abs/1304.8108},
+}
+
+@article{10.1093/biomet/81.3.457,
+    author = {CHEN, XIANG-HUI and DEMPSTER, ARTHUR P. and LIU, JUN S.},
+    title = {Weighted finite population sampling to maximize entropy},
+    journal = {Biometrika},
+    volume = {81},
+    number = {3},
+    pages = {457-469},
+    year = {1994},
+    month = {09},
+    abstract = {Attention is drawn to a method of sampling a finite population of N units with unequal probabilities and without replacement. The method was originally proposed by Stern \&amp; Cover (1989) as a model for lotteries. The method can be characterized as maximizing entropy given coverage probabilities πi, or equivalently as having the probability of a selected sample proportional to the product of a set of ‘weights’ wi. We show the essential uniqueness of the wi given the πi. We present two methods for stepwise selection of sampling units, and corresponding schemes for removal of units that can be used in connection with sample rotation. Inclusion probabilities of any order can be written explicitly in closed form. Second-order inclusion probabilities πij satisfy the condition O \&lt; πij \&lt; πiπj, which guarantees Yates \&amp; Grundy‘s variance estimator to be unbiased, definable for all samples and always nonnegative for any sample size.},
+    issn = {0006-3444},
+    doi = {10.1093/biomet/81.3.457},
+    url = {https://doi.org/10.1093/biomet/81.3.457},
+    eprint = {https://academic.oup.com/biomet/article-pdf/81/3/457/713811/81-3-457.pdf},
+}
+
+@article{Grimmett01042004,
+author    = {Geoffrey Grimmett},
+title     = {Stochastic Apportionment},
+journal   = {The American Mathematical Monthly},
+volume    = {111},
+number    = {4},
+pages     = {299--307},
+year      = {2004},
+publisher = {Taylor \& Francis},
+doi       = {10.1080/00029890.2004.11920078},
+URL       = {https://doi.org/10.1080/00029890.2004.11920078},
+eprint    = {https://doi.org/10.1080/00029890.2004.11920078}
+}
+
+@techreport{balinski1976jefferson,
+  author      = {Michel L. Balinski and H. Peyton Young},
+  title       = {The Jefferson Method of Apportionment},
+  institution = {International Institute for Applied Systems Analysis (IIASA)},
+  type        = {Professional Paper},
+  number      = {PP-76-006},
+  address     = {Laxenburg, Austria},
+  year        = {1976},
+  url         = {http://pure.iiasa.ac.at/597/}
+}
+
+@article{wilson_dhondt,
+  author  = {Helen J. Wilson},
+  title   = {The D’Hondt Method Explained},
+  journal = {Mathematics Department, University College London},
+  year    = {n.d.},
+  note    = {Disponible en el sitio web del Departamento de Matemáticas, UCL},
+  url     = {https://www.ucl.ac.uk/~ucahhwi/dhondt.pdf}
 }
