--- a/Tesis_latex/sections/1_0_mapa_de_trabajo.tex
+++ b/Tesis_latex/sections/1_0_mapa_de_trabajo.tex
@@ -9,7 +9,8 @@
 *2. Desarrollo teórico*
 - Resultados sobre divisor methods
 - D'Hont favorece mayorías
-- Teorema de Balinski y Young
+- Teoremas de Balinski y Young
+- Conclusiones y algunos resultados extra
 
 *3. Métodos aleatorizados*
 - Setting formal y axiomas
