--- a/Tesis_latex/main.tex
+++ b/Tesis_latex/main.tex
@@ -1,4 +1,5 @@
 % !TEX output_directory=out
+\PassOptionsToPackage{svgnames}{xcolor}
 \documentclass[12pt,a4paper]{report}
 
 % Paquetes y configuraciones en un archivo separado
@@ -17,10 +18,13 @@
 % Capítulos
 \include{capitulos/1_introduccion}
 \include{capitulos/2_marco_teorico}
+\include{capitulos/3_metodos_aleatorizados}
+\include{capitulos/4_trabajo}
 \include{capitulos/n_notas}
 
 
 % Bibliografía
+\nocite{*}
 \printbibliography
 
 % Anexos
